🔧 fix(ci): ensure per-service jobs run reliably by adding checkout before paths-filter

--- a/.github/workflows/reactions-domain-deploy.yml
+++ b/.github/workflows/reactions-domain-deploy.yml
@@ -100,13 +100,13 @@ jobs:
         run: cat Dockerfile || echo "NO DOCKERFILE FOUND"
 
       - name: Construir imagen Docker (buildx)
-        run: docker buildx build --load -t ${{ secrets.DOCKERHUB_USERNAME }}/add-like:${{ github.sha }} ./add-like
+        run: docker buildx build --load -t ${{ secrets.DOCKERHUB_USERNAME }}/add-like:latest ./add-like
 
       - name: Login a DockerHub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
       - name: Subir imagen a DockerHub
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/add-like:${{ github.sha }}
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/add-like:latest
 
       - name: Desplegar en EC2 por SSH (con .env)
         uses: appleboy/ssh-action@v0.1.10
@@ -130,12 +130,12 @@ jobs:
             EOF
 
             docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/add-like:${{ github.sha }}
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/add-like:latest
             docker stop add-like || true && docker rm add-like || true
             docker run -d --name add-like \
               --env-file /home/ubuntu/add-like.env \
               -p 6001:6001 \
-              ${{ secrets.DOCKERHUB_USERNAME }}/add-like:${{ github.sha }}
+              ${{ secrets.DOCKERHUB_USERNAME }}/add-like:latest
 
   get_likes_service:
     needs: changes
@@ -184,13 +184,13 @@ jobs:
         run: cat Dockerfile || echo "NO DOCKERFILE FOUND"
 
       - name: Construir imagen Docker (buildx)
-        run: docker buildx build --load -t ${{ secrets.DOCKERHUB_USERNAME }}/get-likes:${{ github.sha }} ./get-likes
+        run: docker buildx build --load -t ${{ secrets.DOCKERHUB_USERNAME }}/get-likes:latest ./get-likes
 
       - name: Login a DockerHub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
       - name: Subir imagen a DockerHub
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/get-likes:${{ github.sha }}
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/get-likes:latest
 
       - name: Desplegar en EC2 por SSH (con .env)
         uses: appleboy/ssh-action@v0.1.10
@@ -214,12 +214,12 @@ jobs:
             EOF
 
             docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/get-likes:${{ github.sha }}
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/get-likes:latest
             docker stop get-likes || true && docker rm get-likes || true
             docker run -d --name get-likes \
               --env-file /home/ubuntu/get-likes.env \
               -p 6003:6003 \
-              ${{ secrets.DOCKERHUB_USERNAME }}/get-likes:${{ github.sha }}
+              ${{ secrets.DOCKERHUB_USERNAME }}/get-likes:latest
 
   remove_like_service:
     needs: changes
@@ -268,13 +268,13 @@ jobs:
         run: cat Dockerfile || echo "NO DOCKERFILE FOUND"
 
       - name: Construir imagen Docker (buildx)
-        run: docker buildx build --load -t ${{ secrets.DOCKERHUB_USERNAME }}/remove-like:${{ github.sha }} ./remove-like
+        run: docker buildx build --load -t ${{ secrets.DOCKERHUB_USERNAME }}/remove-like:latest ./remove-like
 
       - name: Login a DockerHub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
       - name: Subir imagen a DockerHub
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/remove-like:${{ github.sha }}
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/remove-like:latest
 
       - name: Desplegar en EC2 por SSH (con .env)
         uses: appleboy/ssh-action@v0.1.10
@@ -298,9 +298,9 @@ jobs:
             EOF
 
             docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/remove-like:${{ github.sha }}
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/remove-like:latest
             docker stop remove-like || true && docker rm remove-like || true
             docker run -d --name remove-like \
               --env-file /home/ubuntu/remove-like.env \
               -p 6002:6002 \
-              ${{ secrets.DOCKERHUB_USERNAME }}/remove-like:${{ github.sha }}
+              ${{ secrets.DOCKERHUB_USERNAME }}/remove-like:latest
